@@ -1,4 +1,4 @@
 png++ is written by Alexander Shulgin  (alex dot shulgin at gmail dot com)
-Copyright (C) 2007
+Copyright (C) 2007,2008
 
 When writing to me be sure to put png++: in the subject :-)
