@@ -3,10 +3,10 @@ This is png++ the C++ wrapper for libpng.  Version 0.2.1
 General
 =======
 
-Png++ aims to provide simple yet powerful C++ interface to libpng, the
+PNG++ aims to provide simple yet powerful C++ interface to libpng, the
 PNG reference implementation library.
 
-Png++ is free software distributed under a modified variant of BSD
+PNG++ is free software distributed under a modified variant of BSD
 license.  For more details please refer to file COPYING in this
 directory.
 
@@ -25,7 +25,7 @@ representation of the image (well, in most cases it simply instructs
 libpng to do so).
 
 The image in "input.png" can be RGB image, or it might be grayscale or
-even indexed image with a palette -- png++ will just convert any input
+even indexed image with a palette--png++ will just convert any input
 to RGB format.  However, for technical reasons such automatic
 transformation is supported for RGB and Grayscale color types only.
 Optionally there may be an alpha channel in the target color space
@@ -46,8 +46,10 @@ Released source packages can be found here:
 Also, you can check out sources directly from SVN repository:
 
 	svn://svn.sv.nongnu.org/pngpp/trunk/
-or
-	http://svn.sv.nongnu.org/pngpp/trunk/  (for people w/o outgoing svn).
+
+or, for people w/o outgoing svn:
+
+	http://svn.sv.nongnu.org/pngpp/trunk/
 
 Online documentation can be found here:
 
@@ -66,4 +68,4 @@ You can also contact me by dropping a mail to <alex.shulgin@gmail.com>.
 
 Happy hacking!
 --
-Alex Shulgin  <alex.shulgin.gmail.com>
+Alex Shulgin  <alex.shulgin@gmail.com>
