@@ -1,7 +1,7 @@
 /*
- * Copyright (C) 2007   Alex Shulgin
+ * Copyright (C) 2007,2008   Alex Shulgin
  *
- * This file is part of png++ the C++ wrapper for libpng.  Png++ is free
+ * This file is part of png++ the C++ wrapper for libpng.  PNG++ is free
  * software; the exact copying conditions are as follows:
  *
  * Redistribution and use in source and binary forms, with or without
@@ -41,7 +41,7 @@ namespace png
      * \brief Pixel traits class template.
      *
      * Provides information about pixel color type and components bit depth.
-     * Not implemented -- see specializations.
+     * Not implemented--see specializations.
      *
      * \see  pixel_traits<rgb_pixel>, pixel_traits<rgba_pixel>
      */
