@@ -1,3 +1,9 @@
+png++-0.2.2	19 Oct 2008
+
+	Fixed numerous `already defined' errors due to require_color_space
+	implementation.  Added `config.hpp'.  Fixed `strerror' usage.
+	Minor docs fixes.
+	
 png++-0.2.1	08 Dec 2007
 
 	Added support for tRNS chunk.  Added non-std IO streams support.
